added health check api and refactored routing structure
