# src/routes/health.route.ts
@@ -1,0 +1,8 @@
+import express,{Router} from "express";
+import { healthController } from "../controllers/health.controller";
+
+const router: Router = express.Router();    
+
+router.get("/", healthController);
+
+export default router;
